--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  position: relative;
+  height: 100vh;
+  font-family: 'Varela Round', sans-serif;
 }
 
 .App-logo {
